Dev (#37)
- Fixed serial code specifications

- Finally added the dependency for the JetBrains annotations

- Finished solutions for Ice Cream, WordSearch, Morsematics, SquareButton, and Murder

- Removed Medusa dependency

- Upped to Java 17