@@ -19,6 +19,7 @@ import javafx.scene.control.ToggleGroup;
 import javafx.scene.layout.GridPane;
 import javafx.scene.layout.Region;
 import javafx.scene.layout.VBox;
+import org.intellij.lang.annotations.Language;
 
 import java.io.File;
 import java.net.MalformedURLException;
@@ -27,11 +28,9 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.regex.Pattern;
@@ -42,10 +41,12 @@ import static bomb.tools.pattern.facade.FacadeFX.GET_TOGGLE_NAME;
 import static bomb.tools.pattern.observer.ObserverHub.ObserverIndex.BLIND_ALLEY_PANE;
 import static bomb.tools.pattern.observer.ObserverHub.ObserverIndex.SOUVENIR_PANE;
 import static java.util.function.UnaryOperator.identity;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
+@SuppressWarnings("ConstantConditions")
 public class ManualController {
+    private static final String FXML_DIRECTORY = "fxml";
+
     private Map<Toggle, Region> regionMap;
     private final List<Node> allRadioButtons;
 
@@ -72,7 +73,10 @@ public class ManualController {
         allRadioButtons.addAll(radioButtonHouse.getChildren());
         ObserverHub.addObserver(new ForgetMeNotToggleObserver(forgetMeNot));
         ObserverHub.addObserver(new SouvenirToggleObserver(souvenir));
+        long start = System.nanoTime();
         regionMap = setupRegionMap().get();
+        long stop = System.nanoTime();
+        System.out.printf("Timer: %,d", stop - start);
     }
 
     @FXML
@@ -91,6 +95,7 @@ public class ManualController {
 
     @FXML
     public void search() {
+        @Language("regexp")
         String searchTerm = searchBar.getText();
         radioButtonHouse.getChildren().clear();
 
@@ -101,14 +106,14 @@ public class ManualController {
 
         Regex searchPattern = new Regex(searchTerm, Pattern.CASE_INSENSITIVE);
 
-        List<Node> resultingButtons = allRadioButtons.stream()
-                .filter(radioButton -> {
-                    String name = ((RadioButton) radioButton).getText();
-                    searchPattern.loadText(name);
-                    return searchPattern.hasMatch();
-                })
-                .collect(toList());
-        radioButtonHouse.getChildren().addAll(resultingButtons);
+        radioButtonHouse.getChildren().addAll(
+                allRadioButtons.stream()
+                        .filter(radioButton -> {
+                            String name = ((RadioButton) radioButton).getText();
+                            searchPattern.loadText(name);
+                            return searchPattern.hasMatch();
+                        }).toList()
+        );
     }
 
     private CompletableFuture<Map<Toggle, Region>> setupRegionMap() {
@@ -120,37 +125,42 @@ public class ManualController {
                 (filePathMap, radioButtonMap) -> createRegionMap(radioButtonMap, filePathMap));
     }
 
-    private CompletableFuture<Map<String, Region>> createFilePathFuture() {
+    private static CompletableFuture<Map<String, Region>> createFilePathFuture() {
         Regex filenamePattern = new Regex("\\w+\\.");
         ResetObserver resetObserver = new ResetObserver();
 
         CompletableFuture<Map<String, Region>> future = CompletableFuture.supplyAsync(
-                () -> ManualController.class.getResource("fxml"))
-                .thenApply(this::toURI)
+                () -> ManualController.class.getResource(FXML_DIRECTORY))
+                .thenApply(ManualController::toURI)
                 .handle((path, ex) -> {
-                    if (ex != null){
+                    if (ex != null) {
                         ex.printStackTrace();
                         System.exit(-1);
                     }
                     return path;
                 })
                 .thenApply(File::new)
-                .thenApply(this::getFilesFromDirectory)
-                .thenApply(Collection::stream)
-                .thenApply(stream -> stream.filter(location -> !location.contains("solutions")))
-                .thenApply(stream -> stream.filter(location -> !location.contains("old")))
-                .thenApply(stream -> stream.filter(location -> !location.contains("new")))
-                .thenApply(stream -> stream.collect(toMap(
-                        location -> filter(location, filenamePattern)
-                                .replace(".", ""),
-                        location -> createSingleRegion(location, resetObserver)
-                )));
+                .thenApply(ManualController::getFilesFromDirectory)
+                .thenApply(list -> convertFilesToRegions(list, resetObserver, filenamePattern));
 
         ObserverHub.addObserver(resetObserver);
         return future;
     }
 
-    private CompletableFuture<Map<String, Toggle>> createRadioButtonNameFuture(List<Toggle> radioButtonList) {
+    private static Map<String, Region> convertFilesToRegions(List<String> fileList, ResetObserver resetObserver,
+                                                             Regex filenamePattern) {
+        return fileList.stream()
+                .filter(location -> !location.contains("solutions")
+                        && !location.contains("old") && !location.contains("new"))
+                .collect(toMap(
+                        location -> filter(location, filenamePattern)
+                                .replace(".", ""),
+                        location -> createSingleRegion(location, resetObserver)
+                ));
+    }
+
+    private static CompletableFuture<Map<String, Toggle>> createRadioButtonNameFuture(List<Toggle> radioButtonList) {
+        @Language("regexp")
         String newRegex = ALL_CHAR_FILTER.getOriginalPattern()
                 .replace("]", "_]");
         Regex regex = new Regex(newRegex);
@@ -163,7 +173,7 @@ public class ManualController {
                         )));
     }
 
-    private String formatRadioButtonName(Toggle toggle, Regex regex) {
+    private static String formatRadioButtonName(Toggle toggle, Regex regex) {
         String buttonName = GET_TOGGLE_NAME.apply(toggle)
                 .replaceAll("[ -]", "_")
                 .toLowerCase();
@@ -171,13 +181,13 @@ public class ManualController {
         return filter(buttonName, regex);
     }
 
-    private Region createSingleRegion(String fileLocation, ResetObserver resetObserver) {
+    private static Region createSingleRegion(String fileLocation, ResetObserver resetObserver) {
         URI path = Paths.get(fileLocation).toUri();
         FXMLLoader loader = new FXMLLoader(toURL(path));
         return loadToObserver(loader, resetObserver);
     }
 
-    private Region loadToObserver(FXMLLoader loader, ResetObserver resetObserver) throws IllegalArgumentException {
+    private static Region loadToObserver(FXMLLoader loader, ResetObserver resetObserver) throws IllegalArgumentException {
         Region output = FacadeFX.load(loader);
 
         String location = loader.getLocation().toString();
@@ -188,17 +198,17 @@ public class ManualController {
         return output;
     }
 
-    private void loadBlindAlleyController(FXMLLoader loader) {
+    private static void loadBlindAlleyController(FXMLLoader loader) {
         ObserverHub.addObserver(new BlindAlleyPaneObserver(loader.getController()));
     }
 
-    private void loadSouvenirController(FXMLLoader loader) {
+    private static void loadSouvenirController(FXMLLoader loader) {
         ObserverHub.addObserver(new SouvenirPaneObserver(loader.getController()));
     }
 
-    private List<String> getFilesFromDirectory(final File topLevelDirectory) throws NullPointerException {
+    private static List<String> getFilesFromDirectory(final File topLevelDirectory) throws NullPointerException {
         List<String> list = new ArrayList<>();
-        for (final File fileEntry : Objects.requireNonNull(topLevelDirectory.listFiles())) {
+        for (final File fileEntry : topLevelDirectory.listFiles()) {
             if (fileEntry.isDirectory())
                 list.addAll(getFilesFromDirectory(fileEntry));
             else
@@ -207,18 +217,19 @@ public class ManualController {
         return list;
     }
 
-    private Map<Toggle, Region> createRegionMap(Map<String, Toggle> radioButtonMap,
-                                                Map<String, Region> filePathMap) {
+    private static Map<Toggle, Region> createRegionMap(Map<String, Toggle> radioButtonMap,
+                                                       Map<String, Region> filePathMap) {
         Map<Toggle, Region> regionMap = new IdentityHashMap<>();
-        radioButtonMap.keySet()
-                .forEach(key -> regionMap.put(
-                        radioButtonMap.get(key),
-                        filePathMap.get(key)
-                        ));
+
+        for (Map.Entry<String, Toggle> entry : radioButtonMap.entrySet())
+            regionMap.put(
+                    entry.getValue(),
+                    filePathMap.get(entry.getKey())
+            );
         return regionMap;
     }
 
-    private URI toURI(URL url) throws IllegalArgumentException {
+    private static URI toURI(URL url) throws IllegalArgumentException {
         try {
             return url.toURI();
         } catch (URISyntaxException e) {
@@ -226,7 +237,7 @@ public class ManualController {
         }
     }
 
-    private URL toURL(URI uri) throws IllegalArgumentException {
+    private static URL toURL(URI uri) throws IllegalArgumentException {
         try {
             return uri.toURL();
         } catch (MalformedURLException e) {
